--- a/linkbook/core/templates/core/profile.html
+++ b/linkbook/core/templates/core/profile.html
@@ -75,7 +75,7 @@
     }
     </style>
     <div class="container" style="padding: 0px">
-        <div class="row center" style="padding: 0px; margin: 0px">
+        <div class="row" style="padding: 0px; margin: 0px">
         <!-- First Column : Profile page card -->
             <div class="col s12 m12 l4">
                 <br><br>
@@ -99,7 +99,7 @@
                     </div>
                     <div class="card-content">
                       <div class="container">
-                          <div class="row center">
+                          <div class="row">
                                 <div class="col s12 l6 m12">
                                     <button class="btn btn-flat white darken-1 profile_buttons" id="follower_count">followers<span class="badge">{{ follower_count }}</span></button>
                                     <button class="btn btn-flat white profile_buttons darken-1" id = "following_count">following <span class="badge"> {{ following_count }}</span></button>
@@ -117,7 +117,7 @@
         <!-- Second Column started -->
             <div class="col s12 m12 l8">
             <br>
-                <div class="row center" style="border-bottom: 3px solid lightgray; padding: 0px;">
+                <div class="row" style="border-bottom: 3px solid lightgray; padding: 0px;">
                     <div class="col s6 m6 l6" id="popularLinksDiv">
                                     <div class="header center center-align" id="popularLinksTab" style="padding: 0px; cursor:pointer;">
                         <h5 style="padding: 0px; cursor: pointer" id="popularLinksHeading">Popular Links</h5><br>
@@ -130,7 +130,7 @@
 
                     </div>
                 </div>
-                <div class="row center" id="popularLinks" style="padding: 0px; margin: 0px">
+                <div class="row" id="popularLinks" style="padding: 0px; margin: 0px">
                     <div class="col s12 m12 l6">
                         {% if links.0 == none %}
                         {% else %}
@@ -285,7 +285,7 @@
 
                     </div>
             </div>
-                <div class="row center" id="popularBooks" style="padding: 0px; margin: 0px">
+                <div class="row" id="popularBooks" style="padding: 0px; margin: 0px">
                     <div class="col s12 m12 l6">
                         {% if books.0 == none %}
                         {% else %}
