--- a/linkbook/links/templates/links/edit_link.html
+++ b/linkbook/links/templates/links/edit_link.html
@@ -8,14 +8,14 @@
 
     <div class="container">
 
-        <div class="row center">
+        <div class="row">
 
             <div class="col s1 m3 l3"></div>
             <div class="col s10 m6 l6 card hoverable">
             <h4 class="center">Edit your link<h4>
                 <form method="post" action="/link/{{link.id}}/edit/" role="form">
                 {% csrf_token %}
-                    <div class="row center">
+                    <div class="row">
                     <div class="col s12 m6 l6">
                         <div class="input-field">
                             <i class="material-icons prefix">open_in_browser</i>
@@ -31,7 +31,7 @@
                         </div>
                     </div>
                 </div>
-                    <div class="row center">
+                    <div class="row">
                     <div class="col s12 m6 l6">
                         <div class="input-field">
                         <i class="material-icons prefix">assignment</i>
@@ -56,7 +56,7 @@
                     </div>
                     </div>
                 </div>
-                    <div class="row center">
+                    <div class="row">
 
                     <div class=" col s12 m12 l12">
                         <div class="input-field">
