--- a/linkbook/links/templates/links/new_book.html
+++ b/linkbook/links/templates/links/new_book.html
@@ -6,7 +6,7 @@
 
 {% block body %}
     <div class="container">
-        <div class="row center">
+        <div class="row">
             <div class="col s1 l3 m3"></div>
             <div class="col s10 l6 m6 card hoverable">
             <h4 class="center">Create your own book</h4>
