--- a/linkbook/links/templates/links/new_link.html
+++ b/linkbook/links/templates/links/new_link.html
@@ -6,13 +6,13 @@
 
 {% block body %}
     <div class="container">
-        <div class="row center">
+        <div class="row">
             <div class="col s1 m3 l3"></div>
             <div class="col s10 m6 l6 card hoverable">
             <h4 class="center">Create your link</h4>
                 <form method="post" action="{% url 'create_link' %}" role="form">
                 {% csrf_token %}
-                <div class="row center">
+                <div class="row">
                     <div class="col s12 m6 l6">
                         <div class="input-field">
                             <i class="material-icons prefix">open_in_browser</i>
@@ -28,7 +28,7 @@
                         </div>
                     </div>
                 </div>
-                    <div class="row center">
+                    <div class="row">
                     <div class="col s12 m6 l6">
                         <div class="input-field">
                         <i class="material-icons prefix">assignment</i>
@@ -49,7 +49,7 @@
                     </div>
                     </div>
                 </div>
-                    <div class="row center">
+                    <div class="row">
 
                     <div class=" col s12 m12 l12">
                         <div class="input-field">
