--- a/linkbook/links/templates/links/link.html
+++ b/linkbook/links/templates/links/link.html
@@ -58,10 +58,10 @@
     }
 
 </style>
-<div class="container" style="padding: 0px; margin: 0px">
-    <div class="row center" style="padding: 0px; margin: 0px">
-        <div class="col s12 m1 l3"></div>
-        <div class="col s12 m10 l6">
+<div class="container">
+    <div class="row center">
+        <div class="col s12 m1 l3 xl3"></div>
+        <div class="col s12 m10 l6 xl6">
             <ul class="collection hoverable "  style="border: 1px solid #607d8b" id="list">
                 <li class="collection-item avatar">
                     <div class="row center"  style="padding: 0px; margin: 0px">
@@ -246,7 +246,7 @@
                 </li>
             </ul>
         </div>
-        <div class="col s12 m1 l3"></div>
+        <div class="col s12 m1 l3 xl3"></div>
     </div>
 </div>
 <!--  Sharing dropdown -->
