--- a/linkbook/templates/taggit_templatetags2/tagcanvas_include_js.html
+++ b/linkbook/templates/taggit_templatetags2/tagcanvas_include_js.html
@@ -1,17 +1,19 @@
 <script type="text/javascript">
 window.onload = function() {
-  try {
+    try {
       TagCanvas.Start('{{ element_id }}_canvas', '{{ element_id }}_tags',{
-        textColour: 'blue', 
-        outlineColour: 'white',
-        shadow: '#000000',
+        textColour: '#F82035', 
+        textFont: 'helvetica-bold', 
+        outlineColour: 'transparent',
+        shadow: '#F23E3F',
         shadowOffset: [1,1],
         textHeight: 50,
         reverse: true,
         depth: 0.8,
-        maxSpeed: 0.05,
+        maxSpeed: 0.033,
         weight: true,
       });
+    
     } catch(e) {
       // something went wrong, hide the canvas container
         document.getElementById('{{ element_id }}').style.display = 'none';
