Very large screens

--- a/linkbook/authentication/templates/authentication/login.html
+++ b/linkbook/authentication/templates/authentication/login.html
@@ -4,13 +4,12 @@
 
 {% block title %}LOGIN{% endblock %}
 
-
 {% block body %}
     <div class="container">
         <div class="row">
             <br><br>
-            <div class="col s1 m3 l3"></div>
-            <div class="col s10 m6 l6 card hoverable">
+            <div class="col s1 m3 l3 xl3"></div>
+            <div class="col s10 m6 l6 xl6 card hoverable">
 
                 {% if form.non_field_errors %}
                 <br><br>
@@ -46,7 +45,7 @@
           </div>
 
             </div>
-            <div class="col s1 m3 l3"></div>
+            <div class="col s1 m3 l3 xl3"></div>
 
         </div>
     </div>
