--- a/linkbook/core/templates/core/index.html
+++ b/linkbook/core/templates/core/index.html
@@ -58,24 +58,24 @@
 {% for ITEM in all_links %}
 <div class="container" style="padding: 0px; margin: 0px" >
     <div class="row" style="padding: 0px; margin: 0px">
-        <div class="col s12 m1 l3"></div>
-        <div class="col s12 m10 l6 link_card" id="{{ ITEM.link.id }}">
+        <div class="col s12 m1 l3 xl3"></div>
+        <div class="col s12 m10 l6 xl6 link_card" id="{{ ITEM.link.id }}">
             <ul class="collection hoverable "  style="border: 1px solid #607d8b" id="list">
                 <li class="collection-item avatar">
                     <div class="row"  style="padding: 0px; margin: 0px">
                         <!-- user avatar -->
                         <img class="responsive-img circle"  height = "40px" width="40px" src="{{ITEM.link.user.profile.pic}}" />
                         <div class="row">
-                            <div class="col s12 m4 l4">
+                            <div class="col s12 m4 l4 xl4">
                                 <span class="title blue-grey-text ">{{ ITEM.link.user }}<br/>
                         <sup>{{ ITEM.time }}</sup></span>
                         <br><br>
                             </div>
-                           <div class="col s12 m8 l8 right right-align hide-on-med-and-down" id="icons_extra" style="margin: 0px; padding: 0px">
+                           <div class="col s12 m8 l8 xl8 right right-align hide-on-med-and-down" id="icons_extra" style="margin: 0px; padding: 0px">
 
 
                    <div class="row right right-align" style="margin: 0px; padding: 0px">
-                      <div class="col s12 m12 l12 right right-align" style="margin: 0px; padding: 0px">
+                      <div class="col s12 m12 l12 xl12 right right-align" style="margin: 0px; padding: 0px">
 
                           <a class="btn-floating dropdown-button btn-small waves-effect waves-light blue show_url_button" href="#" title="Show URL" data-activates="dropdownRemoverX{{ITEM.link.id}}" id="{{ ITEM.link.id }}"><i class="material-icons">remove_red_eye</i></a>
                                         <a class="btn-floating dropdown-button btn-small waves-effect waves-light blue" href="#" title="Share" data-beloworigin="true" data-activates="dropdownShare{{ITEM.link.id}}"><i class="material-icons">share</i></a>
@@ -83,10 +83,10 @@
                       </div>
                   </div>
                   </div>
-                            <div class="col s12 m8 l8 left left-align hide-on-large-only" id="icons_extra" style="margin: 0px; padding: 0px">
+                            <div class="col s12 m8 l8 xl8 left left-align hide-on-large-only" id="icons_extra" style="margin: 0px; padding: 0px">
 
                    <div class="row left left-align" style="margin: 0px; padding: 0px">
-                      <div class="col s12 m12 l12 left left-align" style="margin: 0px; padding: 0px">
+                      <div class="col s12 m12 l12 xl12 left left-align" style="margin: 0px; padding: 0px">
 
                           <a class="btn-floating dropdown-button btn-small waves-effect waves-light blue show_url_button" href="#" title="Show URL" data-activates="dropdownRemove{{ITEM.link.id}}" id="{{ ITEM.link.id }}"><i class="material-icons">remove_red_eye</i></a>
                                         <a class="btn-floating dropdown-button btn-small waves-effect waves-light blue" href="#" title="Share" data-beloworigin="true" data-activates="dropdownMore0{{ITEM.link.id}}"><i class="material-icons">share</i></a>
@@ -97,11 +97,11 @@
                         </div>
                     </div>
                     <div class="row" style="margin: 0px;">
-                        <div class="col s12 m12 l12">
+                        <div class="col s12 m12 l12 xl12">
                             <i class="material-icons circle blue-grey">description</i>
                             <div>
                                 <div class="row" style="margin-bottom: 0px">
-                                    <div class="col s12 m12 l7">
+                                    <div class="col s12 m12 l7 xl7">
                                         <a href = "{{ITEM.link.url}}" target="_blank" class="title">
                                             <h5>{{ITEM.link.title | linebreaksbr}}</h5>
                                         </a>
@@ -179,21 +179,21 @@
                 {% if request.user.is_authenticated %}
                 <li class="collection-item avatar" style="padding: 0px; margin: 0px">
                     <div class="row" style="padding: 0px; margin: 0px">
-                        <div class="col s6 m4 l4" >
+                        <div class="col s6 m4 l4 xl4" >
                             <span> <sup id="upvotes_count{{ ITEM.link.id }}">{{ ITEM.upvotes }}</sup><sup> upvote(s)</sup></span>
                             <button class="btn green upvote upvote_upper_button waves-effect waves-light {{ITEM.upvote_button}} center" id="upvote_button{{ ITEM.link.id }}" link_id = "{{ ITEM.link.id }}"> <i class="material-icons" style="color: white; background-color: transparent">thumb_up</i> </button>
                         </div>
-                        <div class="col s6 m4 l4" >
+                        <div class="col s6 m4 l4 xl4" >
                             <span> <sup id="downvotes_count{{ ITEM.link.id }}">{{ ITEM.downvotes }} </sup><sup> downvote(s)</sup></span>
                             <button title="downvote" class="btn waves-effect waves-light  red btn-block white-text downvote downvote_upper_button {{ ITEM.downvote_button }}" id="downvote_button{{ ITEM.link.id }}" link_id = "{{ ITEM.link.id }}" > <i class="material-icons" style="color: white; background-color: transparent" >thumb_down</i></button>
                         </div>
-                        <div class="col s12 m4 l4">
+                        <div class="col s12 m4 l4 xl4">
                             <span>
                             <sup><span id="num_comments1{{ ITEM.link.id }}">{{ITEM.link.comment_set.count}}</span> comment(s)</sup>
                             </span>
                             <button class="btn blue waves-light center comments_tab waves-effect" id="comments_tab{{ ITEM.link.id }}">Comments</button>
                         </div>
-                       <div class="col s12 m12 l12 hide-on-large-only">
+                       <div class="col s12 m12 l12 xl12 hide-on-large-only">
                             <br><br>
                         </div>
                         <br><br><br><br>
@@ -214,16 +214,16 @@
                         </div>
                     </form>
                     <div class="row" style="padding: 0px; margin: 0px">
-                        <div class="col s12 m12 l4">
+                        <div class="col s12 m12 l4 xl4">
                             <button class="btn blue waves-effect waves-light commentSubmitButton" id="{{ ITEM.link.id }}">Comment</button>
                         </div>
-                        <div class="col s12 m12 l4"></div>
-                        <div class="col s12 m12 l4"></div>
+                        <div class="col s12 m12 l4 xl4"></div>
+                        <div class="col s12 m12 l4 xl4"></div>
                     </div>
                 </li>
             </ul>
         </div>
-        <div class="col s12 m1 l3"></div>
+        <div class="col s12 m1 l3 xl3"></div>
     </div>
 </div>
 
@@ -377,24 +377,24 @@
         <div class="modal-content">
             <div class="row">
                 <h5 class="center-align blue-text">Edit/Delete Comment</h5>
-                <div class="col s1 m1 l1"></div>
-                <div class="col s10 m10 l10">
+                <div class="col s1 m1 l1 xl1"></div>
+                <div class="col s10 m10 l10 xl10">
                     <div class="input-field">
                         <textarea id="modalEditCommentTextarea{{ ITEM.link.id }}">
 
                         </textarea>
                         <div class="row">
-                            <div class="col 12 m12 l6">
+                            <div class="col 12 m12 l6 xl6">
                                 <button class="btn editCommentButton" id="editCommentButton{{ ITEM.link.id }}">Save</button>
                             </div>
-                            <div class="col 12 m12 l6">
+                            <div class="col 12 m12 l6 xl6">
                                 <button class="btn red white-text deleteCommentButton" id="deleteCommentButton{{ ITEM.link.id }}">Delete</button>
                             </div>
                         </div>
 
                     </div>
                 </div>
-                <div class="col s1 m1 l1"></div>
+                <div class="col s1 m1 l1 xl1"></div>
             </div>
         </div>
     </div>
@@ -433,11 +433,11 @@
                         + '<div class="row">'
                 		+ '<a href="/' + comments[i]['user'] + '/"><img src=' + comments[i]['pic']
                 		+ ' class="responsive-img circle" title=' + comments[i]['user'] + '></a>'
-                		+ '<div class = "col s12 m12 l12 " comments_inside_div commentsListItem">'
+                		+ '<div class = "col s12 m12 l12 xl12 " comments_inside_div commentsListItem">'
                 		+ '<p style="font-weight: 800" class="commentsListItem ">'
                 		+ '<a class="hide-on-med-and-down" href="/' + comments[i]['user'] + '/">' + comments[i]['user'] + '</a>' + '<span>&nbsp;&nbsp;' + comments[i]['text'] + '</span>'
                 		+ '</p>' + '</div>'
-                            + '<div class="col s12 m12 l12">'
+                            + '<div class="col s12 m12 l12 xl12">'
                           +  '<sub class="commentsListItem grey-text">' + comments[i]['time'] + '</sub>';
                     if(comments[i]['user'] === "{{request.user.username}}")
                     {
