--- a/linkbook/core/templates/core/home.html
+++ b/linkbook/core/templates/core/home.html
@@ -6,18 +6,24 @@
 
 
 {% block body %}
+    <div class="container">
+        <div class="row">
+            <div class="col s12 m3 l3 xl3">
+                <div class="col s12 m6 l6 xl6">
 
-    {% load taggit_templatetags2_tags %}
-{% include "taggit_templatetags2/tagcanvas_include_js_static.html" %}
-{% include_tagcanvas 'tag' '400 px' '400 px' 'view_tag' 'links.Link' %}
+                {% load taggit_templatetags2_tags %}
+            {% include "taggit_templatetags2/tagcanvas_include_js_static.html" %}
+            {% include_tagcanvas 'tag' '400 px' '400 px' 'view_tag' 'links.Link' %}
 
-
+                </div>
+            </div>
+            <div class="col s12 m3 ll3 xl3"></div>
+        </div>
+    </div>
     <script>
 
         $('.modal').modal();
 
     </script>
-
-
 
 {% endblock body %}
