--- a/linkbook/templates/base.html
+++ b/linkbook/templates/base.html
@@ -125,14 +125,14 @@
     <div class="modal-content">
         <div class="container">
             <div class="row">
-                <div class="col s12 m2 l2"></div>
-                <div class="col s12 m8 l8">
+                <div class="col s12 m2 l2 xl2"></div>
+                <div class="col s12 m8 l8 xl8">
                     <h5 class="center center-align blue-grey-text">LinkBook</h5>
                 </div>
-                <div class="col s12 m2 l2"></div>
+                <div class="col s12 m2 l2 xl2"></div>
             </div>
             <div class="row">
-                <div class="col s12 m4 l4">
+                <div class="col s12 m4 l4 xl4">
                     <div>
                         <a href="{% url 'social:begin' 'github' %}?next={{ request.path }}">
                             <button class="btn black lighten-3 white-text btn-block "><span class="fa fa-github"
@@ -173,10 +173,11 @@
                         </a>
                     </div>
                 </div>
-                <div class="col s12 m1 l1 hide-on-small-and-down" style="border-left: 1px solid black">
+                <div class="col s12 m1 l1 xl1
+                 hide-on-small-and-down" style="border-left: 1px solid black">
                     <br><br><br><br><br><br><br><br><br><br><br><br><br>
                 </div>
-                <div class="col s12 m7 l7">
+                <div class="col s12 m7 l7 xl7">
                     <form method="post" action="{% url 'login' %}?next={{ request.path }}" role="form">
                         {% csrf_token %}
                         <div class="input-field{% if form.username.errors %} has-error{% endif %}">
@@ -199,10 +200,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col s12 m4 l4"></div>
-                <div class="col s12 m4 l4 center center-align">
+                <div class="col s12 m4 l4 xl4"></div>
+                <div class="col s12 m4 l4 xl4 center center-align">
                 </div>
-                <div class="col s12 m4 l4"></div>
+                <div class="col s12 m4 l4 xl4"></div>
             </div>
         </div>
     </div>
@@ -239,7 +240,7 @@
         <form method="post" action="{% url 'create_link' %}" role="form">
             {% csrf_token %}
             <div class="row">
-                <div class="col s12 m6 l6">
+                <div class="col s12 m6 l6 xl6">
                     <div class="input-field ">
                         <i class="material-icons prefix">open_in_browser</i>
                         <input type="url" class="input validate" name="URL" id="URL" autocomplete="autocomplete"
@@ -248,7 +249,7 @@
                                data-error="Invalid URL, Example(Valid URL) : https://www.google.co.in." data-success="">URL</label>
                     </div>
                 </div>
-                <div class="col s12 m6 l6">
+                <div class="col s12 m6 l6 xl6">
                     <div class="input-field ">
                         <i class="material-icons prefix">title</i>
                         <input type="text" class="input" name="TITLE" id="TITLE" autocomplete="autocomplete" required
@@ -258,14 +259,14 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col s12 m6 l6">
+                <div class="col s12 m6 l6 xl6">
                     <div class="input-field ">
                         <i class="material-icons prefix">assignment</i>
                         <input type="text" class="input" name="TAGS" id="TAGS">
                         <label for="TAGS" class="active">Tags</label>
                     </div>
                 </div>
-                <div class="col s12 m6 l6">
+                <div class="col s12 m6 l6 xl6">
                     <div class="input-field ">
                         <i class="material-icons prefix">book</i>
                         <select multiple title="Choose the books in which the current link has to be saved" name="BOOKS"
@@ -277,7 +278,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class=" col s12 m12 l12">
+                <div class=" col s12 m12 l12 xl12">
                     <div class="input-field">
                         <i class="material-icons prefix">description</i>
                         <textarea class="input materialize-textarea" name="DESCRIPTION" id="DESCRIPTION"
